# Elastos.SDK.CrossCompile.Config

./: .gitignore
cmake/: Android.cmake  CMakeLists.txt  iOS.cmake
scripts/: build-Elastos.NET.Carrier.Native.SDK.sh  build-Elastos.ORG.Wallet.Lib.C.sh  build-Elastos.SDK.ElephantWallet.Contact.sh  build-Elastos.SDK.Keypair.C.sh  build-PersonalStorage.SDK.OSS.sh  build-alioss.sh  build-apr.sh  build-aprutil.sh  build-boost.sh  build-cpp-filecoin.sh  build-cpp-libp2p.sh  build-cppcodec.sh  build-curl.sh  build-filecoin-ffi.sh  build-filecoin-signing-tools.sh  build-gsl.sh  build-json.sh  build-minixml.sh  build-openssl.sh  build-spdlog.sh  build-sqlite.sh  build.sh  download-tarball.sh  package-mobile.sh  tarball-config.sh
scripts/build-filecoin-signing-tools/: build.sh  signer-ffi-lib.rs  signer-lib.rs
scripts/common/: base.sh  download-tarball.sh  getopt.sh  setenv-android.sh  setenv-ios.sh  setenv-unixlike.sh  setenv.sh
