SET(CFG_CMAKE_MIN_VERSION "3.12.0")
if(${CMAKE_VERSION} VERSION_LESS ${CFG_CMAKE_MIN_VERSION})
    message(FATAL_ERROR "CMake ${CFG_CMAKE_MIN_VERSION} or higher is required.  You are running version ${CMAKE_VERSION}")
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

include(${CMAKE_CURRENT_LIST_DIR}/BuildType.cmake)

if(DEFINED ENV{CFG_TARGET_ABI})
	set(CFG_TARGET_PLATFORM $ENV{CFG_TARGET_PLATFORM} CACHE STRING "")
endif()

if("${CFG_TARGET_PLATFORM}" STREQUAL "Android")
	set(ANDROID_NDK_HOME $ENV{ANDROID_NDK_HOME} CACHE STRING "")
	if(DEFINED ENV{CFG_TARGET_ABI})
		set(CFG_TARGET_ABI $ENV{CFG_TARGET_ABI} CACHE STRING "")
	else()
		set(CFG_TARGET_ABI "armeabi-v7a" CACHE STRING "")
	endif()

	include(${CMAKE_CURRENT_LIST_DIR}/Android.cmake)
elseif("${CFG_TARGET_PLATFORM}" STREQUAL "iOS")
	if(DEFINED ENV{CFG_TARGET_ABI})
		set(CFG_TARGET_ABI $ENV{CFG_TARGET_ABI} CACHE STRING "")
	else()
		set(CFG_TARGET_ABI "arm64" CACHE STRING "")
	endif()

	set(IOS_ARCH ${CFG_TARGET_ABI})
	set(IOS_UNIVERSAL TRUE)
	set(IOS_DEPLOYMENT_CFG_TARGET 8)
	set(IOS_BITCODE 0)
	include(${CMAKE_CURRENT_LIST_DIR}/iOS.cmake)
else()
    execute_process(COMMAND uname -s OUTPUT_VARIABLE SYSTEM_NAME OUTPUT_STRIP_TRAILING_WHITESPACE)
	set(CFG_TARGET_PLATFORM "${SYSTEM_NAME}" CACHE STRING "")
	if(DEFINED ENV{CFG_TARGET_ABI})
		set(CFG_TARGET_ABI $ENV{CFG_TARGET_ABI} CACHE STRING "")
	else()
		set(CFG_TARGET_ABI "x86_64" CACHE STRING "")
	endif()
endif()

# enable pkg-config and set pkg-config find path
find_package(PkgConfig REQUIRED)
set(ENV{PKG_CONFIG_PATH}  "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")

set(INSTALL_BIN_DIR       "${CMAKE_INSTALL_PREFIX}/bin" CACHE PATH "Installation directory for executables")
set(INSTALL_LIB_DIR       "${CMAKE_INSTALL_PREFIX}/lib" CACHE PATH "Installation directory for libraries")
set(INSTALL_INC_DIR       "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
set(INSTALL_MAN_DIR       "${CMAKE_INSTALL_PREFIX}/share/man" CACHE PATH "Installation directory for manual pages")
set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")

message(STATUS "********************************************")
message(STATUS "CFG_TARGET_PLATFORM  : ${CFG_TARGET_PLATFORM}")
message(STATUS "CFG_TARGET_ABI       : ${CFG_TARGET_ABI}")
message(STATUS "CMAKE_INSTALL_PREFIX : ${CMAKE_INSTALL_PREFIX}")
message(STATUS "*********************************************")
